fixed header
add spacing and fixed picture overlapping the header

--- a/app/imports/ui/stylesheets/HomeTemplate.css
+++ b/app/imports/ui/stylesheets/HomeTemplate.css
@@ -44,6 +44,7 @@ header {
   background-color: var(--primary);
   width: 100%;
   margin-bottom: 0px;
+  z-index: 1;
 }
 
 .netflixLogo {
@@ -118,6 +119,7 @@ header {
   -ms-transform: scale(1.4);
   -webkit-transform: scale(1.4);
   transform: scale(1.4);
+  z-index: 0;
 }
 
 .box img {
