--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -25,3 +25,7 @@ a:link, a:visited, a:hover, a:active {
 .aboutPageInfo {
   padding: 0 30% 0 30%;
 }
+
+.navHead {
+  padding-right: 50px;
+}
